changes made to "Landing Page"

--- a/src/components/CarouselWidget/CarouselController.scss
+++ b/src/components/CarouselWidget/CarouselController.scss
@@ -34,7 +34,7 @@
       width: 100%;
       transform: translateY(100%);
       z-index: 0;
-      background-color: #4c9173;
+      background-color: #a0a0a0a2;
       transition: transform 1s;
     }
   }
