--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,3 +1,4 @@
+/*
 .contact-info, .social-medias{
     ul{
         display: flex;
@@ -12,3 +13,4 @@
     margin-right: 20px;
     font-weight: bold;
 }
+*/
