--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,9 @@
 * {
     font-family: 'Montserrat',
         sans-serif;
+
+    margin: 0;
+    padding: 0;
 }
 
 ul{
@@ -12,4 +15,10 @@ ul{
 li{
     list-style: none;
     margin: 0;
+}
+
+@media only screen and (max-width: 480px) {
+  html {
+    font-size: 100%;
+  }
 }
