--- a/src/scss/modules/_custom.scss
+++ b/src/scss/modules/_custom.scss
@@ -1,8 +1,8 @@
-// @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 // @import "~bootstrap/scss/bootstrap";
 
-@font-face {
-  font-family: 'Arvo';
-  font-display: auto;
-  src: local('Arvo'), url(https://fonts.gstatic.com/s/arvo/v9/rC7kKhY-eUDY-ucISTIf5PesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
-}
+// @font-face {
+//   font-family: 'Arvo';
+//   font-display: auto;
+//   src: local('Arvo'), url(https://fonts.gstatic.com/s/arvo/v9/rC7kKhY-eUDY-ucISTIf5PesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+// }
